# lynx-investor-real-estate

./: CHANGELOG.md  DEVELOPMENT.md  README.md  lynx-investor-real-estate.py  pyproject.toml
.github/: PUBLISHING.md
docs/: API.md
lynx_realestate/: __init__.py  __main__.py  cli.py  display.py  easter.py  interactive.py  models.py  plugin.py
lynx_realestate/core/: analyzer.py  conclusion.py  fetcher.py  news.py  reports.py  storage.py  ticker.py
lynx_realestate/export/: __init__.py  html_export.py  pdf_export.py  txt_export.py
lynx_realestate/gui/: app.py
lynx_realestate/metrics/: calculator.py  explanations.py  relevance.py  sector_insights.py
lynx_realestate/tui/: app.py  themes.py
robot/: api_tests.robot  cli_tests.robot  export_tests.robot
tests/: test_calculator.py  test_conclusion.py  test_edge_cases.py  test_explanations.py  test_export.py  test_models.py  test_relevance.py  test_sector_validation.py  test_storage.py
