[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name            = "lynx-investor-real-estate"
version = "4.0"
description     = "Lynx Real Estate — Fundamental analysis specialized for REITs and real-estate operating companies"
readme          = "README.md"
requires-python = ">=3.10"
license         = {text = "BSD-3-Clause"}
authors         = [{name = "Borja Tarraso", email = "borja.tarraso@member.fsf.org"}]
dependencies    = [
    "lynx-investor-core>=4.0",
    "yfinance>=0.2.40",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "rich>=13.7",
    "textual>=0.50",
    "feedparser>=6.0",
    "pandas>=2.1",
    "numpy>=1.26",
]

[project.optional-dependencies]
pdf = ["weasyprint>=60"]

[project.scripts]
lynx-realestate = "lynx_realestate.__main__:main"

[tool.setuptools.packages.find]
include = ["lynx_realestate*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
